Fix mentor masonry, width is undersquashed now

--- a/css/mentors.css
+++ b/css/mentors.css
@@ -1,5 +1,5 @@
 .mentor-item {
-    width: 575px;
+    width: 500px;
     /*height: 250px;*/
     margin-bottom: 20px;
 }
